--- a/templates/home.html
+++ b/templates/home.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div id="Header">Real-Time-Forum</div>
+    <div id="Header">🅡🅔🅐🅛-🅣🅘🅜🅔-🅕🅞🅡🅤🅜</div>
 
     <nav class="nav">
         <a id ="homePage" href = "/" class="nav__link" data-link>HomePage</a>
@@ -36,10 +36,7 @@
 
 
     <div id="Login"> 
-        <h1>Login or Register</h1>
        
-       <span onclick="document.getElementById('Login').style.display='none'" class="close" title="Close Modal">&times;</span>
-
        <form class="modal-content animate" action="/Login">
        <div class="imgcontainer">
         <img src="/css/img/user-group-man-woman.png" height="300px" width="300px" alt="Avatar" class="avatar">
@@ -47,6 +44,8 @@
       
 
        <div class="container">
+        <h1>🅛🅞🅖🅘🅝</h1>
+
         <label for="userName"><b>UserName</b></label>
         <input type="text" placeholder="Enter Username" name="UserName" required>
         
@@ -59,7 +58,7 @@
         </label>
 
         <button type="button" onclick="document.getElementById('Login').style.display='none'" class="cancelbtn">Cancel</button>
-        <span class="psw">Forgot <a href='#'>Password?</a></span>
+        <span class="psw">New User Please👇 </span>
 
         <button type="button" onclick="document.getElementById('Registration').style.display='none'" class="registration">Register</button>
 
@@ -68,18 +67,16 @@
 
     </div>
 
-    <div id="registration"> 
-        <h1>Register New User</h1>
+    <div id="registration">     
        
-       <span onclick="document.getElementById('registration').style.display='none'" class="close" title="Close Modal">&times;</span>
-
        <form class="modal-content animate" action="/register">
        <div class="imgcontainer">
         <img src="/css/img/user-group-man-woman.png" height="300px" width="300px" alt="Avatar" class="avatar">
        </div> 
-      
+       
 
-       <div class="container">
+       <div class="container"> 
+        <h2>🅡🅔🅖🅘🅢🅣🅔🅡</h2>
         <label for="FirstName"><b>First Name</b></label>
         <input type="text" placeholder="Enter First Name" name="FirstName" required>
 
@@ -104,9 +101,11 @@
         <label for="psw"><b>Password</b></label>
         <input type="password" placeholder="Enter Password" name="psw" required>
 
-
-
         <button type="submit">Register</button>
+
+        <button type="button" onclick="document.getElementById('registration').style.display='none'" class="cancelbtn">Cancel</button>
+
+        
 
        </div>
     </form>
