shortcut icon added

--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RT-Forum</title>
+    <title> RT-Forum </title>
+    <link rel="shortcut icon" href="/css/img/chat.png">
     <link rel ="stylesheet" href="/css/home.css">
 </head>
 
@@ -114,15 +115,15 @@
 
 </body>
 
-<!-- <script>
+<script>
     var modal = document.getElementById('Login')
 
     window.onclick = function(event) {
         if(event.target == modal) {
-            modal.style.display = "hidden";
+            modal.style.display = "visible";
         }
         if(event.target != modal) {
-            modal.style.display ="visible"
+            modal.style.display ="hidden"
         }
     }
 
@@ -132,5 +133,5 @@
         if(event.target == modalReg)
         modalReg.style.display = "none";
     }
-</script> -->
+</script>
 </html>
