--- a/templates/home.html
+++ b/templates/home.html
@@ -38,7 +38,7 @@
 
     <div id="loginModal" class="modal"> 
        
-       <form class="modal-content animate" action="/login.go">
+       <form class="modal-content animate" action="/login">
        <div class="imgcontainer">
         <img src="/css/img/user-group-man-woman.png" height="300px" width="300px" alt="Avatar" class="avatar">
        </div> 
