--- a/templates/home.html
+++ b/templates/home.html
@@ -40,7 +40,7 @@
        
        <form class="modal-content animate" action="/login">
        <div class="imgcontainer">
-        <img src="/css/img/user-group-man-woman.png" height="300px" width="300px" alt="Avatar" class="avatar">
+        <img src="/css/img/user-group-man-woman.png" height="250px" width="300px" alt="Avatar" class="avatar">
        </div> 
       
 
@@ -72,7 +72,7 @@
        
        <form class="modal-content animate" action="/register">
        <div class="imgcontainer">
-        <img src="/css/img/user-group-man-woman.png" height="300px" width="300px" alt="Avatar" class="avatar">
+        <img src="/css/img/user-group-man-woman.png" height="250px" width="300px" alt="Avatar" class="avatar">
        </div> 
        
 
@@ -96,16 +96,20 @@
         <label for="Email"><b>Email</b></label>
         <input type="email" placeholder="Enter Email Address" name="Email" required>
 
-        <label for="userName"><b>UserName</b></label>
-        <input type="text" placeholder="Enter Username" name="UserName" required>
+        <!-- <label for="userName"><b>UserName</b></label>
+        <input type="text" placeholder="Enter Username" name="UserName" required> -->
 
         <label for="psw"><b>Password</b></label>
         <input type="password" placeholder="Enter Password" name="psw" required>
 
-        <button class="button" type="submit">Register</button>
-
-        <button id="cancelbtn" type="button" onclick="document.getElementById('regModal').style.display='none'; closeBtn()" class="button">Cancel</button>
-    
+        
+      <span>
+        <button class="button1" type="submit">Register</button>
+        
+        <button id="cancelbtn" type="button" onclick="document.getElementById('regModal').style.display='none'; closeBtn()" class="button1">Cancel</button>
+       
+      </span>
+       
 
         
 
