--- a/templates/home.html
+++ b/templates/home.html
@@ -17,6 +17,8 @@
         <a id ="login" onclick="openLogin() ;"class="nav__link" data-link>Login</a>
         <a id ="post" href = "/posts" class="nav__link" data-link>Posts</a>
         <a id="profile" href = "/profile" class="nav__link" data-link>Profile</a>    
+        <a id="logout" href = "/logout" class="nav__link" style="display:none" data-link>LogOut</a>    
+
     </nav>
 
     <nav class="chat">
@@ -61,7 +63,7 @@
         <button id="cancelbtn" type="button" onclick="document.getElementById('loginModal').style.display='none'; closeBtn()" class="button">Cancel</button>
         <span class="psw">New User Please👇 </span>
 
-        <button type="button" onclick="openReg(); " class="button">Register</button>
+        <button type="button" onclick="openReg(); " class="button" href="/registration">Register</button>
 
        </div>
        </form>
@@ -72,39 +74,39 @@
        
        <form class="modal-content animate" action="/register">
        <div class="imgcontainer">
-        <img src="/css/img/user-group-man-woman.png" height="250px" width="300px" alt="Avatar" class="avatar">
+        <img src="/css/img/user-group-man-woman.png" height="230px" width="290px" alt="Avatar" class="avatar">
        </div> 
        
 
        <div class="container"> 
         <h2>🅡🅔🅖🅘🅢🅣🅔🅡</h2>
         <label for="FirstName"><b>First Name</b></label>
-        <input type="text" placeholder="Enter First Name" name="FirstName" required>
+        <input id="FirstName" type="text" placeholder="Enter First Name" name="FirstName" required>
 
         <label for="LastName"><b>Last Name</b></label>
-        <input type="text" placeholder="Enter Last Name" name="Last Name" required>
+        <input id="LastName" type="text" placeholder="Enter Last Name" name="Last Name" required>
 
         <label for="NickName"><b>NickName</b></label>
-        <input type="text" placeholder="Enter Nick Name" name="Nick Name" required>
+        <input id="NickName" type="text" placeholder="Enter Nick Name" name="Nick Name" required>
 
         <label for="Age"><b>Age</b></label>
-        <input type="number" placeholder="Enter Age" name="Age" required>
+        <input id="Age" type="number" placeholder="Enter Age" name="Age" required>
 
-        <label for="Gender"><b>Gender</b></label>
-        <input type="text" placeholder="Enter Gender" name="Gender" required>
+        <label  for="Gender"><b>Gender</b></label>
+        <input id="Gender" type="text" placeholder="Enter Gender" name="Gender" required>
     
         <label for="Email"><b>Email</b></label>
-        <input type="email" placeholder="Enter Email Address" name="Email" required>
+        <input id="Email" type="email" placeholder="Enter Email Address" name="Email" required>
 
         <!-- <label for="userName"><b>UserName</b></label>
         <input type="text" placeholder="Enter Username" name="UserName" required> -->
 
         <label for="psw"><b>Password</b></label>
-        <input type="password" placeholder="Enter Password" name="psw" required>
+        <input id="PassWord" type="password" placeholder="Enter Password" name="psw" required>
 
         
       <span>
-        <button class="button1" type="submit">Register</button>
+        <button class="button1" id="registerBtn" type="submit">Register</button>
         
         <button id="cancelbtn" type="button" onclick="document.getElementById('regModal').style.display='none'; closeBtn()" class="button1">Cancel</button>
        
@@ -117,36 +119,14 @@
     </form>
     </div>
 
+
+    <div id="regConfirmed" style="display:none">
+        <h4>
+            You're are now Registered
+        </h4>
+    </div>
 </body>
 
 <!-- this script runs login modal -->
-<script>
-    function openLogin() {
-        closePost()
-        document.getElementById('loginModal').style.display = "block";
-        document.getElementById('regModal').style.display = "none";
-
-
-    }
-    
-
-    function openReg() {
-        closePost()
-        document.getElementById('loginModal').style.display ="none";
-        document.getElementById('regModal').style.display = "block";
-    }
-
-    function closeBtn() {
-        document.getElementById('postBlock').style.display = 'flex';
-    }
-
-    function closePost() {
-        document.getElementById('postBlock').style.display = "none";
-    }
-
-    // function openPost() {
-
-    //     document.getElementById('postBlock').style.display = 'block';
-    // }
-</script>
+<script src="/js/register.js"></script>
 </html>
