some minor changes

--- a/templates/home.html
+++ b/templates/home.html
@@ -87,7 +87,7 @@
         <input id="LastName" type="text" placeholder="Enter Last Name" name="Last Name" required>
 
         <label for="NickName"><b>NickName</b></label>
-        <input id="NickName" type="text" placeholder="Enter Nick Name" name="Nick Name" required>
+        <input id="NickName" type="text" placeholder="This will be your userName" name="Nick Name" required  minlength="4" maxlength="10">
 
         <label for="Age"><b>Age</b></label>
         <input id="Age" type="number" placeholder="Enter Age" name="Age" required>
@@ -96,7 +96,7 @@
         <input id="Gender" type="text" placeholder="Enter Gender" name="Gender" required>
     
         <label for="Email"><b>Email</b></label>
-        <input id="Email" type="email" placeholder="Enter Email Address" name="Email" required>
+        <input id="Email" type="email" pattern=".+@globex\.com" size="30" placeholder="Enter Email Address" name="Email" required>
 
         <!-- <label for="userName"><b>UserName</b></label>
         <input type="text" placeholder="Enter Username" name="UserName" required> -->
