--- a/css/home.css
+++ b/css/home.css
@@ -1,4 +1,5 @@
 body {
+    width: 100%;
     background-image: url("/css/img/canvas.png");
     background-size: 100%;
     --nav-width: 200px;
@@ -238,7 +239,7 @@ h2 {
     box-shadow: 2px 2px 2px 2px white;
     margin-left: 10cm;
     margin-right: 10cm;
-   background-image:url("/css/img/canvas.png");
+   background-color: rgb(0, 143, 0);
    background-size: 100%;
    color: white;
    font-size: 1.5rem;
