login and register modal styling and cookie struct

--- a/css/home.css
+++ b/css/home.css
@@ -75,8 +75,11 @@ a {
 }
 
 .modal {
+    width:2060px;
+    height: 1203.729px;
     display: none;
     margin-left: 1.5cm;
+    margin-right: 1.5cm;
     position: flex;
     z-index: 1;
     overflow: none;
@@ -85,11 +88,13 @@ a {
 }
 
 .modal-content {
+    width: 1400px;
+    height: 650px;
     margin-top: .25cm;
     border-radius: 25px;
     box-shadow: 2px 2px 2px 2px white;
-    margin-left: 1.5cm;
-    margin-right: 10cm;
+    margin-left: 5cm;
+    margin-right: 200px;
    background-image:url("/css/img/canvas.png");
    background-size: 100%;
    color: white;
@@ -153,10 +158,11 @@ h2 {
     box-shadow: 2px 2px 2px 2px white;
 }
 
-.container {
-    margin-right: 7cm;
-    padding-left: 320px;
-    padding-right: 2cm;
+.container {  
+    width: 930px;
+    height: 75.591px;
+    margin-right: 600px;
+    margin-left: 200px;
     padding-bottom: .01cm;
     display: flex;
     flex-direction: column;
@@ -169,13 +175,15 @@ h2 {
 }
 
 #loginModal{
-    height: 100%;
-    width: 100%;
+    height: 80%;
+    width: 80%;
+    width:2060px;
+    height: 603.729px;
 }
 
 #regModal {
-    height: 100%;
-    width: 100%;
+    height: 80%;
+    width: 80%;
 }
 
 .button{
