--- a/css/home.css
+++ b/css/home.css
@@ -268,60 +268,22 @@ h2 {
     width: 25%;
 }
 
+#LoggedOn {
+    padding-left: 1.5cm;
+    align-items: center;
+    margin-top: .25cm;
+    border-radius: 25px;
+    box-shadow: 2px 2px 2px 2px white;
+    margin-left: 10cm;
+    margin-right: 10cm;
+   background-color: rgb(0, 143, 0);
+   background-size: 100%;
+   color: white;
+   font-size: 1.5rem;
+   font-weight: bold;
+   font-family: cursive;
+   margin-bottom: .25cm;
+    height: 100%;
+    width: 25%;
+}
 
-/* #form {
-    position: relative;
-  }
-  
-  #form #email {
-    width: 300px;
-    background: #292929;
-    outline: none;
-    border: none;
-    padding: 10px;
-    border-radius: 6px;
-    color: #fff;
-    font-style: 18px;
-  }
-  
-  #form .input-box {
-    position: relative;
-  }
-  
-  #text {
-    display: block;
-    color: #000;
-    font-weight: 300;
-    font-style: italic;
-    padding: 5px;
-  }
-  
-  #form.invalid .input-box::before {
-    content: '';
-    position: absolute;
-    right: 12px;
-    top: 9px;
-    width: 24px;
-    height: 24px;
-    background: url(https://fadzrinmadu.github.io/hosted-assets/email-validation-check-using-javascript/invalid.png);
-    -webkit-background-size: cover;
-    background-size: cover;
-  }
-  
-  #form.valid .input-box::before {
-    content: '';
-    position: absolute;
-    right: 12px;
-    top: 9px;
-    width: 24px;
-    height: 24px;
-    background: url(https://fadzrinmadu.github.io/hosted-assets/email-validation-check-using-javascript/valid.png);
-    -webkit-background-size: cover;
-    background-size: cover;
-  }
-
-  * {
-    margin: 0;
-    padding: 0;
-    font-family: 'Poppins', sans-serif;
-  } */
