--- a/templates/home.html
+++ b/templates/home.html
@@ -7,11 +7,12 @@
     <title> RT-Forum </title>
     <link rel="shortcut icon" href="/css/img/chat.png">
     <link rel ="stylesheet" href="/css/home.css">
-</head>
+    <script src="https://kit.fontawesome.com/3c167d6bd6.js" crossorigin="anonymous"></script>
 
 <body>
     <div id="Header">🅡🅔🅐🅛-🅣🅘🅜🅔-🅕🅞🅡🅤🅜</div>
 
+<!-- **************************************** LEFT MAIN NAV LINK***********************************************-->
     <nav class="nav">
         <a id ="homePage" href = "/" class="nav__link" data-link>HomePage</a>
         <a id ="login" onclick="openLogin() ;"class="nav__link" data-link>Login</a>
@@ -21,103 +22,173 @@
 
     </nav>
 
+<!--****************************************** RIGHT CHAT NAV LINK*********************************************-->
     <nav class="chat">
         <a id ="Chat Here" href = "/chat" class="chat__link" data-link>Chat Here</a>
      
     </nav>
 
+<!-- **************************************** CREATE POST BLOCK *************************************************************-->
     <div id="postBlock"class ="posts" >
-        <label for="PostTitle">Post Title:</label>
-        <textarea name="postTitle" type="text" rows="1" cols="60" id="PostTitle" name="Title" placeholder="Enter Title..."></textarea>
-        <label for="Post Content"> Content:  </label>
-        <textarea name="postinput" type="text" rows="4" cols="60" id="PostContent" name="Content" placeholder="Description..."></textarea>
-        <label for="Post Cat">Catergory:</label>
-        <input type="dropdown" id="PostCat" name="Category" placeholder="Choose Categories..">
+        <div>
+            <label for="PostTitle">Post Title:</label>
+            <textarea name="postTitle" type="text" rows="1" cols="60" id="PostTitle" name="Title" placeholder="Enter Title..."></textarea>
+        </div>
+
+        <div>
+            <label for="Post Content"> Content:  </label>
+            <textarea name="postinput" type="text" rows="4" cols="60" id="PostContent" name="Content" placeholder="Description..."></textarea>
+        </div>
+
+        <div>
+            <label for="Post Cat">Catergory:</label>
+            <input type="dropdown" id="PostCat" name="Category" placeholder="Choose Categories..">
+        </div>
+
         <button class="button" type="submit">Create Post</button>
     
     </div>
 
-
+<!-- 
+*************************************************************************************************************
+*********************************** LOGIN MODAL************************************************************
+*************************************************************************************************************
+ -->
     <div id="loginModal" class="modal"> 
-       
-       <form class="modal-content animate" action="/login">
-       <div class="imgcontainer">
-        <img src="/css/img/user-group-man-woman.png" height="250px" width="300px" alt="Avatar" class="avatar">
-       </div> 
-      
-
-       <div class="container" >
-        <h1>🅛🅞🅖🅘🅝</h1>
-
-        <label for="userName"><b>UserName</b></label>
-        <input type="text" placeholder="Enter Username" name="UserName" required>
+        <div class="modal-content animate">
+        <form id="form" class="form" action="/login">
+            <div class="imgcontainer">
+                <img src="/css/img/user-group-man-woman.png" height="250px" width="300px" alt="Avatar" class="avatar">
+            </div> 
         
-        <label for="psw"><b>Password</b></label>
-        <input type="password" placeholder="Enter Password" name="psw" required>
 
-        <button class="button" type="submit">Login</button>
-        <label>
-            <input type="checkbox" checked="checked" name="remember"> Remember Me
-        </label>
+            <div class="container" >
+                <h1>🅛🅞🅖🅘🅝</h1>
+                <div class="login-form-control">
+                    <label for="userName"><b>UserName</b></label>
+                    <input type="text" placeholder="Enter Username" name="UserName" required>
+                    <i class="fa-regular fa-circle-check"></i>
+                    <i class="fa-regular fa-exclamation"></i>
+                    <small>Error Message</small>
+                </div>
 
-        <button id="cancelbtn" type="button" onclick="document.getElementById('loginModal').style.display='none'; closeBtn()" class="button">Cancel</button>
-        <span class="psw">New User Please👇 </span>
+                <div class="login-form-control">
+                    <label for="psw"><b>Password</b></label>
+                    <input id="PassWord" type="password" placeholder="Enter Password" name="psw" required>
+                    <i class="fa-regular fa-circle-check"></i>
+                    <i class="fa-regular fa-exclamation"></i>
+                    <small>Error Message</small>
+                </div>
 
-        <button type="button" onclick="openReg(); " class="button" href="/registration">Register</button>
+                <button class="button" type="submit">Login</button>
 
-       </div>
-       </form>
+                <label>
+                    <input type="checkbox" checked="checked" name="remember"> Remember Me
+                </label>
 
+                <button id="cancelbtn" type="button" onclick="document.getElementById('loginModal').style.display='none'; closeBtn()" class="button">Cancel</button>
+                <span class="psw">New User Please👇 </span>
+
+                <button type="button" onclick="openReg(); " class="button" href="/registration">Register</button>
+
+            </div>
+        </form>
+        </div>
     </div>
+<!-- 
+***********************************LOGIN MODAL ENDS************************************************************
+ -->
 
+
+
+<!-- 
+*************************************************************************************************************
+***********************************REGISTER MODAL************************************************************
+*************************************************************************************************************
+ -->
     <div id="regModal" class="modal">     
-       
-       <form class="modal-content animate" action="/register">
-       <div class="imgcontainer">
-        <img src="/css/img/user-group-man-woman.png" height="230px" width="290px" alt="Avatar" class="avatar">
-       </div> 
-       
-
-       <div class="container" id="form"> 
-        <h2>🅡🅔🅖🅘🅢🅣🅔🅡</h2>
-        <label for="FirstName"><b>First Name</b></label>
-        <input id="FirstName" type="text" placeholder="Enter First Name" name="FirstName" required>
-
-        <label for="LastName"><b>Last Name</b></label>
-        <input id="LastName" type="text" placeholder="Enter Last Name" name="Last Name" required>
-
-        <label for="NickName"><b>NickName</b></label>
-        <input id="NickName" type="text" placeholder="This will be your userName" name="Nick Name" required  minlength="4" maxlength="10">
-
-        <label for="Age"><b>Age</b></label>
-        <input id="Age" type="number" placeholder="Enter Age" name="Age" required>
-
-        <label  for="Gender"><b>Gender</b></label>
-        <input id="Gender" type="text" placeholder="Enter Gender" name="Gender" required>
-    
-        <label for="Email"><b>Email</b></label>
-        <input id="Email" type="email" onkeydown="validation()" size="30" placeholder="Enter Email Address" name="Email" required>
-        <span id="text"></span>
-        <!-- <label for="userName"><b>UserName</b></label>
-        <input type="text" placeholder="Enter Username" name="UserName" required> -->
-
-        <label for="psw"><b>Password</b></label>
-        <input id="PassWord" type="password" placeholder="Enter Password" name="psw" required>
-
-        
-      <span>
-        <button class="button1" id="registerBtn" type="submit">Register</button>
-        
-        <button id="cancelbtn" type="button" onclick="document.getElementById('regModal').style.display='none'; closeBtn()" class="button1">Cancel</button>
-       
-      </span>
-       
-
+        <div class="modal-content animate">
+        <form id="regform" class="form"  action="/register">
+        <div class="imgcontainer">
+            <img src="/css/img/user-group-man-woman.png" height="230px" width="290px" alt="Avatar" class="avatar">
+        </div> 
         
 
-       </div>
-    </form>
+        <div class="container" id="form"> 
+            <h2>🅡🅔🅖🅘🅢🅣🅔🅡</h2>
+
+            <div class="reg-form-control">
+                <label for="FirstName"><b>First Name</b></label>
+                <input id="FirstName" type="text" placeholder="Enter First Name" name="FirstName" required>
+                <i class="fa-regular fa-circle-check"></i>
+                <i class="fa-regular fa-exclamation"></i>           
+                <small>Error Message</small>
+            </div>
+             
+            <div class="reg-form-control">
+                <label for="LastName"><b>Last Name</b></label>
+                <input id="LastName" type="text" placeholder="Enter Last Name" name="Last Name" required>
+                <i class="fa-regular fa-circle-check"></i>
+                <i class="fa-regular fa-exclamation"></i>
+                <small>Error Message</small>
+            </div>
+
+            <div class="reg-form-control">
+                <label for="NickName"><b>NickName</b></label>
+                <input id="NickName" type="text" placeholder="This will be your userName" name="Nick Name" required  minlength="4" maxlength="10">
+                <i class="fa-regular fa-circle-check"></i>
+                <i class="fa-regular fa-exclamation"></i>
+                <small>Error Message</small>
+            </div>
+
+            <div class="reg-form-control">
+                <label for="Age"><b>Age</b></label>
+                <input id="Age" type="number" placeholder="Enter Age" name="Age" required>
+                <i class="fa-regular fa-circle-check"></i>
+                <i class="fa-regular fa-exclamation"></i>
+                <small>Error Message</small>
+            </div>
+
+            <div class="reg-form-control">
+                <label  for="Gender"><b>Gender</b></label>
+                <input id="Gender" type="text" placeholder="Enter Gender" name="Gender" required>
+                <i class="fa-regular fa-circle-check"></i>
+                <i class="fa-regular fa-exclamation"></i>
+                <small>Error Message</small>
+            </div>
+
+            <div class="reg-form-control">
+                <label for="Email"><b>Email</b></label>
+                <input id="Email" type="email" size="30" placeholder="Enter Email Address" name="Email" required>
+                <span id="text"></span>
+                <i class="fa-regular fa-circle-check"></i>
+                <i class="fa-regular fa-exclamation"></i>
+                <small>Error Message</small>
+            </div>
+            
+            <div class="reg-form-control">
+                <label for="psw"><b>Password</b></label>
+                <input id="PassWord" type="password" placeholder="Enter Password" name="psw" required>
+                <!-- <input type="checkbox" class="togglePw" id="pwd" onclick="showPassword('PassWord')"/> -->
+                <i class="fa-light fa-eye-slash" class="pwshow" onclick="showPassword('PassWord')"></i>
+                <i class="fa-regular fa-circle-check"></i>
+                <i class="fa-regular fa-exclamation"></i>
+                <small>Error Message</small>
+            </div>
+            
+            <span>
+                <button class="button1" id="registerBtn" type="submit">Register</button>
+                
+                <button id="cancelbtn" type="button" onclick="document.getElementById('regModal').style.display='none'; closeBtn()" class="button1">Cancel</button>
+            </span>
+        
+        </div>
+        </form>
+        </div>
     </div>
+<!-- 
+***********************************REGISTER MODAL ENDS************************************************************
+ -->
 
 
     <div id="regConfirmed" style="display:none">
