--- a/templates/home.html
+++ b/templates/home.html
@@ -14,6 +14,7 @@
 
     <nav class="nav">
         <a id ="homePage" href = "/" class="nav__link" data-link>HomePage</a>
+        <a id ="register" onclick="openReg() ;"class="nav__link" data-link>Register</a>
         <a id ="login" onclick="openLogin() ;"class="nav__link" data-link>Login</a>
         <a id ="post" href = "/posts" class="nav__link" data-link>Posts</a>
         <a id="profile" href = "/profile" class="nav__link" data-link>Profile</a>    
